--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
